# Daybreak

./: .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  SoundBytes.md  build.rs  daybreak.ini  flake.nix  steamdeck_quickstart.sh  studentcode.py  test_student_code.py
.github/workflows/: build.yaml
remote-test/: app.go  go.mod
src/: daemon.rs  lib.rs  main.rs  robot.rs  sfx_manager.rs  tui.rs  tui_readdevices.rs  tui_runrobot.rs
src/protos/: runtime_status.proto
