[package]
name = "daybreak"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf = "3"
signal-hook = "0.3.17"
ssh2 = "0.9"
linked-hash-map = "0.5.6"
termion = "4.0.3"
rust-ini = "0.21.1"
gilrs = "0.11.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
cpal = "0.15.2"
symphonia = { version = "0.5.3", features = ["mp3", "wav", "ogg"] }
rodio = "0.17.3"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
